--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,7 +21,7 @@
   --primary-color: #4756df;
   --secondary-color: #ff7235;
   --primary-shadow: #8b8eaf;
-  --secondary-shadow: #6487d3;
+  --secondary-shadow: #5092e7e3;
   --bottom-margin: 0.5rem;
   --bottom-margin-2: 1rem;
   --line-height: 1.7rem;
